--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,3 +1,4 @@
+/* General font style and layout choices for whole page */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -6,15 +7,18 @@
     color: white;
 }
 
+/* baseline color */
 body {
     background-color: #d9dcd6;
 }
 
+/* attempted to find nice color to match theme of the page with a bit of unique flair than standard grey */
 .header {
     padding: 20px;
     background: -webkit-linear-gradient(360deg, #1C1C1C 10%, #494949 360%); background: -moz-linear-gradient(360deg, #1C1C1C 10%, #494949 360%); background: linear-gradient(360deg, #1C1C1C 10%, #494949 360%);
 }
 
+/* main header layout */
 .header h1 {
     display: inline-block;
     background-size: 50px 50px;
@@ -22,10 +26,12 @@ body {
     color: #7C898D;
 }
 
+/* bit of stylistic choice for header */
 .header h1 .jk {
-    color: green;
+    color: #4d4dff;
 }
 
+/* basic menu nested in navigation */
 .header menu {
     padding-top: 15px;
     margin-right: 20px;
@@ -42,10 +48,12 @@ body {
     margin-left: 25px;
 }
 
+/* didn't like underline in menu, made text in navigation plain */
 a {
     text-decoration: none;
 }
 
+/* self-adjusting banner at top of page */
 .hero {
     height: 100%;
     width: 100%;
@@ -54,11 +62,18 @@ a {
     background-position: center;
 }
 
-.content {
-    width: 100%;
-    display: inline-block;
+/* attempted to make flex work in order to stylize and fit well regardless of type of machine used to access the page */
+main {
+    display: flex;
+    flex-wrap: wrap;
 }
 
+.content {
+    width: 100%;
+    flex: 2 1 200px;
+}
+
+/* stylistic choice to have alternating background colors */
 .about_me, .contact_me {
     height: 300px;
     width: 100%;
@@ -72,6 +87,12 @@ a {
     background-color: #d9e6f2;
 }
 
+/* attempted to properly line images in work portion */
+.work article {
+    display: inline-block;
+    display: flex;
+}
+
 .resume {
     margin-bottom: 0px;
     padding: 10px;
@@ -79,15 +100,16 @@ a {
     background-color: #d9e6f2;
 }
 
+/* spent too much time using relative to line folder and summary header, did not have time to go back and readjust with flex */
 .about_me h2 {
     position: relative;
     top: 90px;
     left: -205px;
-    /* transform: translateX(-1px); */
     font-size: 35px;
     color: #7C898D;
 }
 
+/* all headers in each article adjust to fit nicely over the folder image */
 .work h2 {
     position: relative;
     top: 90px;
@@ -112,136 +134,61 @@ a {
     color: #7C898D;
 }
 
+/* maintaining stylistic choice in text */
 .about_me h2 .diff_color {
-    color: green;
+    color: #4d4dff;
 }
 
 .work h2 .diff_color {
-    color: green;
+    color: #4d4dff;
 }
-/*---------------------------------*/
-.stock_column {
-    width: 1850px;
-    height: 600px;
-}
-
-.stock1_position {
-    width: 1550px;
-    height: 550px;
-    border: 10px solid chartreuse;
+/* work section that I could not get to function quite like I wanted to line nicely at start and on adjustment of window size */
+.stock_position1 {
+    flex: 1 0 900px;
+    text-align: center;
 }
 
-a:hover{
-    box-shadow: inset 0px 0px 8px navajowhite, 0 0 15px navajowhite;
-    }
-
-.stock2_position {
-    position: relative;
-    bottom: 35px;
-    left: 280px;
-    width: 420px;
-    height: 350px;
-    border: 10px solid chartreuse;
+/* separate style and position classes to attempt maintaining size difference between main project and other 6 */
+.stock_style1 {
+    max-width: 1500px;
+    height: 500px;
+    border: 10px solid #4d4dff;
 }
 
-.stock3_position {
-    position: relative;
-    bottom: 635px;
-    left: 715px;
-    width: 520px;
-    height: 350px;
-    border: 10px solid chartreuse;
+.stock_position {
+    flex: 1 0 200px;
+    margin: 30px;
 }
 
-.stock4_position {
-    position: relative;
-    bottom: 1235px;
-    left: 1250px;
-    width: 580px;
-    height: 350px;
-    border: 10px solid chartreuse;
+.stock_style {
+    max-width: 500px;
+    max-height: 350px;
+    border: 10px solid #4d4dff;
+    margin: 0 2rem;
+    justify-content: space-between;
 }
 
-.stock5_position {
-    position: relative;
-    bottom: 1470px;
-    left: 280px;
-    width: 520px;
-    height: 350px;
-    border: 10px solid chartreuse;
+/* ran out of time for proper :hover effects to glow on work image hover */
+
+.stock_style:hover {
+    
 }
 
-.stock6_position {
-    position: relative;
-    bottom: 2070px;
-    left: 815px;
-    width: 520px;
-    height: 350px;
-    border: 10px solid chartreuse;
-}
-
-.stock7_position {
-    position: relative;
-    bottom: 2670px;
-    left: 1350px;
-    width: 480px;
-    height: 350px;
-    border: 10px solid chartreuse;
-}
-
-/*---------------------------------*/
 .contact_me h2 .diff_color {
-    color: green;
+    color: #4d4dff;
 }
 
 .resume h2 .diff_color {
-    color: green;
+    color: #4d4dff;
 }
 
-.content-card1 img, .content-card2 img, .content-card3 img {
-    max-height: 200px;
-}
-
-.content-card1 h2, .content-card2 h2, .content-card3 h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
+/* ran out of time to readjust, maintained initial style choice in attempting to line folder image up to the left */
 .float-left {
     float: left;
     margin-right: 25px;
 }
 
-.float-right {
-    float: right;
-    margin-left: 25px;
-}
-
-.benefits {
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
-    background-color: #2589bd;
-}
-
-.benefits-card {
-    margin-bottom: 32px;
-}
-
-.benefits-card img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefits-card h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
+/* simple stylistic choice */
 p {
     font-size: 16px;
     padding-bottom: 32px;
@@ -258,25 +205,27 @@ p {
     font-size: 20px;
 }
 
-/* using a mobile-first approach, use `min-width` values going from narrow -> wide for a responsive design */
-@media screen and (min-width: 768px) {
-    /* on tablets, set columns to only be 50% of the width and not grow */
-    .card-column {
-      flex: 0 0 50%;
-      max-width: 50%;
+/* Tablet size - Get rid of folder icon and change header style for content. Wasn't able to achieve clean image and header adjustment*/
+@media screen and (max-width: 992px) {
+    .media_hide{
+        visibility: hidden;
     }
-  
-    /* select the last child to grow to full width if it has space to grow */
-    .card-column:last-child {
-      flex-grow: 1;
+
+    .content summary h2 {
+        top: 0px;
+        left: 0px;
+        flex: 1 0 200px;
+        padding: 10px;
+        border-width: 1px;
+        background-color: #1C1C1C;
     }
-  }
-  
-  /* media query for larger screens */
-  @media screen and (min-width: 992px) {
-  
-    .card-column {
-      flex: 0 0 33.333%;
-      max-width: 33.333%;
+
+    .content summary p {
+        font-stretch: wider;
     }
-  }
+}
+  
+  /* Smartphone size - ran out of time to adjust a lot of elements to readjust according to vision */
+@media screen and (max-width: 768px) {
+
+}
